fix(plan): align plan types and policy cache typing

--- a/services/orchestrator/tsconfig.json
+++ b/services/orchestrator/tsconfig.json
@@ -10,6 +10,7 @@
     "declaration": true,
     "declarationMap": true,
     "types": ["node", "vitest"],
+    "typeRoots": ["./src/types", "./node_modules/@types"],
     "rootDir": "src",
     "outDir": "dist"
   },
