--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -186,7 +186,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.24.3'
+          # Align with the toolchain pinned in go.work so CI installs a released Go version.
+          go-version-file: go.work
           check-latest: true
 
       - name: Cache Go modules for gosec
