--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -161,27 +161,29 @@ jobs:
     runs-on: ubuntu-latest
     services:
       zookeeper:
-        image: bitnami/zookeeper:3.8.1
+        image: confluentinc/cp-zookeeper:7.9.4
         ports:
           - 2181:2181
         env:
-          ALLOW_ANONYMOUS_LOGIN: "yes"
+          ZOOKEEPER_CLIENT_PORT: 2181
+          ZOOKEEPER_TICK_TIME: 2000
       kafka:
-        image: bitnami/kafka:3.5.0
+        image: confluentinc/cp-kafka:7.9.4
         ports:
           - 9092:9092
         env:
-          KAFKA_CFG_BROKER_ID: 1
-          KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
-          KAFKA_CFG_LISTENERS: PLAINTEXT://0.0.0.0:9092
-          KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
-          KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
-          KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-          KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 1
-          KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-          ALLOW_PLAINTEXT_LISTENER: "yes"
+          KAFKA_BROKER_ID: 1
+          KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+          KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+          KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+          KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+          KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+          KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+          KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+          KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+          KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
         options: >-
-          --health-cmd="bash -c 'kafka-topics.sh --bootstrap-server localhost:9092 --list'" --health-interval=10s --health-timeout=5s --health-retries=6
+          --health-cmd="bash -c 'kafka-topics --bootstrap-server localhost:9092 --list'" --health-interval=10s --health-timeout=5s --health-retries=6
       rabbitmq:
         image: rabbitmq:3.13-management
         ports:
@@ -231,6 +233,13 @@ jobs:
         run: |
           sudo systemctl start docker
           docker info
+
+      - name: Verify broker container images
+        if: matrix.project.name == 'orchestrator'
+        run: |
+          docker manifest inspect confluentinc/cp-zookeeper:7.9.4 >/dev/null
+          docker manifest inspect confluentinc/cp-kafka:7.9.4 >/dev/null
+          docker manifest inspect rabbitmq:3.13-management >/dev/null
 
       - name: Install dependencies
         run: npm ci
