--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Scan for secrets with Gitleaks
         uses: gitleaks/gitleaks-action@v2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITLEAKS_OAIT }}
+          GITHUB_TOKEN: ${{ secrets.GITLEAKS_OAIT || secrets.GITHUB_TOKEN }}
 
   trivy-fs:
     name: Trivy filesystem scan
