--- a/services/indexer/Cargo.toml
+++ b/services/indexer/Cargo.toml
@@ -28,6 +28,7 @@ twox-hash = "1"
 uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
 parking_lot = "0.12"
 regex = "1"
+num = "0.4"
 tower = { version = "0.4", features = ["util"] }
 once_cell = "1"
 sha2 = "0.10"
