feat: add tenant-aware queue metrics and monitoring

--- a/charts/oss-ai-agent-tool/values.yaml
+++ b/charts/oss-ai-agent-tool/values.yaml
@@ -282,7 +282,10 @@ orchestrator:
     min: 2
     max: 10
     targetQueueDepth: 5
-    metricName: orchestrator_queue_depth
+    metricName: orchestrator_queue_lag
+    metricSelector:
+      queue: plan.steps
+      transport: kafka
   resources:
     requests: { cpu: "200m", memory: "256Mi" }
     limits: { cpu: "1", memory: "512Mi" }
@@ -400,6 +403,25 @@ kafka:
     size: 10Gi
     storageClass: ""
   resources: {}
+
+monitoring:
+  serviceMonitor:
+    enabled: false
+    namespace: ""
+    namespaceSelector: {}
+    interval: 30s
+    scrapeTimeout: 10s
+    scheme: ""
+    tlsConfig: {}
+    relabelings: []
+    metricRelabelings: []
+    additionalLabels: {}
+  grafana:
+    enabled: false
+    namespace: ""
+    folder: OSS AI Agent Tool
+    annotations: {}
+    additionalLabels: {}
 
 jaeger:
   enabled: true
