--- a/charts/oss-ai-agent-tool/templates/orchestrator-hpa.yaml
+++ b/charts/oss-ai-agent-tool/templates/orchestrator-hpa.yaml
@@ -1,6 +1,9 @@
 {{- $root := . -}}
 {{- with $root.Values.orchestrator.hpa }}
 {{- if .enabled }}
+{{- $defaultMetric := ternary "orchestrator_queue_lag" "orchestrator_queue_depth" (eq $root.Values.messaging.type "kafka") -}}
+{{- $metricName := .metricName | default $defaultMetric -}}
+{{- $metricSelector := .metricSelector | default dict -}}
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
@@ -18,7 +21,14 @@ spec:
     - type: Pods
       pods:
         metric:
-          name: {{ .metricName | default "queue_depth" }}
+          name: {{ $metricName }}
+          {{- if $metricSelector }}
+          selector:
+            matchLabels:
+              {{- range $key, $value := $metricSelector }}
+              {{ $key }}: {{ $value | quote }}
+              {{- end }}
+          {{- end }}
         target:
           type: AverageValue
           averageValue: {{ int (.targetQueueDepth | default 5) }}
