--- a/charts/oss-ai-agent-tool/values.yaml
+++ b/charts/oss-ai-agent-tool/values.yaml
@@ -282,10 +282,9 @@ orchestrator:
     min: 2
     max: 10
     targetQueueDepth: 5
-    metricName: orchestrator_queue_lag
     metricSelector:
       queue: plan.steps
-      transport: kafka
+      # tenant: demo       # Uncomment to scope the HPA to a specific tenant label.
   resources:
     requests: { cpu: "200m", memory: "256Mi" }
     limits: { cpu: "1", memory: "512Mi" }
@@ -409,6 +408,7 @@ monitoring:
     enabled: false
     namespace: ""
     namespaceSelector: {}
+    portName: http         # Must match a named port on the orchestrator Service.
     interval: 30s
     scrapeTimeout: 10s
     scheme: ""
