--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -154,7 +154,24 @@ jobs:
         run: |
           coverage=$(go tool cover -func=coverage.out | awk '/total:/ { gsub("%","",$3); print $3 }')
           echo "Go coverage: ${coverage}%"
-          python3 -c "import sys; coverage=float(sys.argv[1]); threshold=60.0; raise SystemExit(f'Coverage {coverage:.2f}% is below threshold {threshold:.2f}%') if coverage < threshold else print(f'Coverage {coverage:.2f}% meets threshold {threshold:.2f}%')" "$coverage"
+          COVERAGE_VALUE="$coverage" python3 <<'PY'
+import os
+import sys
+
+raw_coverage = os.environ.get('COVERAGE_VALUE')
+if raw_coverage is None or raw_coverage.strip() == '':
+    print('Coverage value is missing; ensure go tool cover output is parsed correctly.', file=sys.stderr)
+    sys.exit(1)
+
+coverage = float(raw_coverage)
+threshold = 60.0
+
+if coverage < threshold:
+    print(f"Coverage {coverage:.2f}% is below threshold {threshold:.2f}%", file=sys.stderr)
+    sys.exit(1)
+
+print(f"Coverage {coverage:.2f}% meets threshold {threshold:.2f}%")
+PY
 
   typescript:
     name: TypeScript lint, test & build (${{ matrix.project.name }})
