--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,6 +31,8 @@ jobs:
 
       - name: Scan for secrets with Gitleaks
         uses: gitleaks/gitleaks-action@v2
+        with:
+          args: --no-git --redact
         env:
           GITHUB_TOKEN: ${{ secrets.GITLEAKS_OAIT || secrets.GITHUB_TOKEN }}
 
