Harden collaboration IP limiter

--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -73,6 +73,7 @@
     "undici": "^6.18.0",
     "uuid": "^13.0.0",
     "ws": "^8.18.3",
+    "y-protocols": "^1.0.6",
     "y-websocket": "^2.0.4",
     "yaml": "^2.4.2",
     "yjs": "^13.6.27",
