--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -50,6 +50,7 @@
     "@opentelemetry/semantic-conventions": "^1.9.0",
     "@types/ws": "^8.18.1",
     "amqplib": "^0.10.3",
+    "chokidar": "^3.6.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "ipaddr.js": "^2.2.0",
