--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -21,7 +21,10 @@
     "@tauri-apps/api": "^2.0.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
-    "monaco-editor": "^0.55.1"
+    "monaco-editor": "^0.55.1",
+    "y-monaco": "^0.1.6",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -35,6 +38,7 @@
     "@testing-library/svelte": "^5.0.0",
     "@types/cookie": "^1.0.0",
     "@types/node": "^24.10.1",
+    "@vitest/coverage-v8": "^4.0.13",
     "eslint": "^9.39.1",
     "eslint-plugin-svelte": "^3.13.0",
     "globals": "^16.5.0",
