--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -22,6 +22,7 @@
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2.4.4",
     "monaco-editor": "^0.55.1",
+    "y-protocols": "^1.0.6",
     "y-monaco": "^0.1.6",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
