Ensure Playwright deps installed and wait for layout persistence

--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -11,7 +11,8 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "lint": "eslint . && npm run check",
     "test": "npm run test:unit",
-    "test:e2e": "playwright test",
+    "playwright:install": "playwright install --with-deps chromium",
+    "test:e2e": "npm run playwright:install && playwright test",
     "test:unit": "vitest run",
     "mock:orchestrator": "node ./tests/mock-orchestrator.js",
     "tauri": "tauri dev",
