--- a/services/orchestrator/package.json
+++ b/services/orchestrator/package.json
@@ -60,6 +60,7 @@
     "mongodb": "^7.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.15.3",
+    "node-pty": "^1.0.0",
     "openai": "^6.7.0",
     "openrouter-client": "^1.6.2",
     "pg": "^8.16.3",
