--- a/apps/gui/package.json
+++ b/apps/gui/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.43.0",
     "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/adapter-node": "^5.4.0",
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.5.7",
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
