--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -9,7 +9,7 @@
     "build": "esbuild src/index.ts --bundle --platform=node --format=cjs --sourcemap --outfile=dist/index.js --banner:js=\"#!/usr/bin/env node\"",
     "dev": "ts-node src/index.ts",
     "test": "npm run build && node --test tests/*.test.js",
-    "test:coverage": "npm run build && c8 --check-coverage --branches 60 --functions 60 --lines 60 --statements 60 node --test tests/*.test.js",
+    "test:coverage": "npm run build && c8 --exclude src/index.ts --check-coverage --branches 80 --functions 85 --lines 85 --statements 85 node --test tests/*.test.js",
     "lint": "eslint \"src/**/*.ts\""
   },
   "devDependencies": {
