--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "AI Agent Tool Companion",
   "description": "Connects the AI Agent Tool Gateway for telemetry and automation.",
   "version": "0.1.0",
-  "permissions": ["tabs", "activeTab", "scripting"],
+  "permissions": ["tabs", "activeTab", "scripting", "storage"],
   "host_permissions": ["https://gateway.example.com/*", "http://localhost:8080/*"],
   "background": {
     "service_worker": "src/background.js"
