Tighten browser telemetry and CLI commit validation

--- a/apps/browser-extension/manifest.json
+++ b/apps/browser-extension/manifest.json
@@ -10,7 +10,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://*/*", "http://*/*"],
+      "matches": ["https://gateway.example.com/*", "http://localhost:8080/*"],
       "js": ["src/content.js"],
       "run_at": "document_idle"
     }
